# color-agent

./: .clineignore  .dockerignore  .env.vault  .gitignore  CHANGELOG.md  CLAUDE.md  DATA_IMPORT.md  DOCKER.md  LICENSE  README.md  commitlint.config.mjs  docker-compose.test.yml  docker-compose.yml  docker-helpers.sh  import_data.sql  import_data_docker.sh  import_data_local.sh  import_data_sql.sh  package.json  pnpm-lock.yaml  prettier.config.mjs
apps/api/: Dockerfile  README.md  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup-dev.bat  setup-dev.sh  setup.bat  setup.sh
apps/api/sql/functions/: uuid_generate_v7.sql
apps/api/src/: __init__.py  main.py
apps/api/src/api/: main.py  router.py  routers.py
apps/api/src/api/containers/: __init__.py
apps/api/src/api/core/: __init__.py  config.py  database.py  decorators.py  enums.py  logger.py  models.py  security.py  setup.py
apps/api/src/api/domain/: associations.py  dependencies.py  enums.py  filters.py  helpers.py  services.py
apps/api/src/api/domain/analogous/: __init__.py  dependencies.py  models.py  repository.py  routes.py  schemas.py  service.py
apps/api/src/api/domain/color_range/: __init__.py  dependencies.py  models.py  repository.py  routes.py  schemas.py
apps/api/src/api/domain/health/: __init__.py
apps/api/src/api/domain/locale/: __init__.py  dependencies.py  locales.py  models.py  repository.py  routes.py  schemas.py  service.py
apps/api/src/api/domain/product/: __init__.py  dependencies.py  models.py  repository.py  routes.py  schemas.py  service.py
apps/api/src/api/domain/product_line/: __init__.py  dependencies.py  models.py  repository.py  routes.py  schemas.py  service.py
apps/api/src/api/domain/product_swatch/: __init__.py  dependencies.py  models.py  repository.py  routes.py  schemas.py  service.py
apps/api/src/api/domain/product_type/: __init__.py  dependencies.py  models.py  repository.py  routes.py  schemas.py
apps/api/src/api/domain/product_variant/: __init__.py  dependencies.py  models.py  repository.py  routes.py  schemas.py  service.py
apps/api/src/api/domain/tag/: __init__.py  dependencies.py  models.py  repository.py  routes.py  schemas.py  service.py
apps/api/src/api/domain/tier/: models.py  schemas.py
apps/api/src/api/domain/user/: __init__.py  auth.py  dependencies.py  models.py  repository.py  schemas.py  service.py
apps/api/src/api/exceptions/: __init__.py  app_exceptions.py  cache_exceptions.py  http_exceptions.py
apps/api/src/api/routes/: __init__.py  dependencies.py  helpers.py  locale.py  product.py  product_line.py  product_swatch.py  product_variant.py  supporting.py  vendor.py
apps/api/src/api/schemas/: __init__.py  address.py  auth.py  base.py  mixins.py  pagination.py
apps/api/src/api/services/: __init__.py  cache.py  queue.py
apps/api/src/api/types/: __init__.py
apps/api/src/api/utils/: helpers.py  lang.py  path.py  reducers.py  string.py  terminal.py
apps/api/src/api/utils/color/: color_formats.py  constants.py  (+3 more)
apps/api/src/contracts/: repositories.py
apps/api/src/core/: config.py  database.py  logger.py  security.py  setup.py
apps/api/src/crud/: api_filter.py  crud_adapter.py
apps/api/src/exceptions/: __init__.py  app_exceptions.py  http_exceptions.py
apps/api/src/models/: __init__.py  associations.py  base.py  locale.py  mixins.py  product.py  product_line.py  product_swatch.py  product_variant.py  supporting.py  tier.py  user.py  vendor.py
apps/api/src/repositories/: async_repository.py  base_repository.py  users.py
apps/api/src/schemas/: __init__.py  base.py  locale.py  mixins.py  product.py  product_line.py  product_swatch.py  product_variant.py  supporting.py  tier.py  user.py  vendor.py
apps/api/src/scripts/: add_product.py  create_first_superuser.py  create_tables.py  drop_all_tables.py  generate_sql.py  import_data.py  import_data_modified.py  run_app.py  setup_and_import.py
apps/api/src/services/: paginator.py  queue.py  user.py
apps/api/src/types/: datetime.py
apps/api/src/utils/: helpers.py  logging.py
apps/api/tests/: test_main.py
(+35 files in other folders)
