[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "color-agent-api"
version = "0.0.1"
description = "ColorAgent API"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Sean Bellows", email = "sean@example.com" }]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "email-validator>=2.1.0",
    "sqlalchemy>=2.0.0",
    "starlette>=0.46.0",
    "asyncpg>=0.29.0",
    "redis>=5.0.0",
    "celery>=5.3.0",
    "structlog>=24.0.0",
    "psycopg>=3.1.0",
    "passlib>=1.7.4",
    "bcrypt>=4.1.0",
    "python-jose>=3.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "mypy>=1.8.0",
]

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
